starting the free functon

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "main.h": "c",
         "mman.h": "c",
-        "malloc.h": "c"
+        "malloc.h": "c",
+        "free.h": "c"
     }
 }
